feat(VAppBar): convert to v3 (#13575)
Co-authored-by: Albert Kaaman <albert@kaaman.nu>
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -91,3 +91,7 @@
   pointer-events: none
   opacity: 0
   transition: opacity 0.2s ease-in-out
+
+.v-btn
+  .v-app-bar &
+    @include elevation($button-app-bar-elevation)
