--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -1,4 +1,5 @@
 // Defaults
+$button-app-bar-elevation: 0 !default;
 $button-border-color: rgba(var(--v-border-color), var(--v-border-opacity)) !default;
 $button-border-radius: $border-radius-root !default;
 $button-border-style: $border-style-root !default;
