--- a/packages/vuetify/src/components/VImg/VImg.sass
+++ b/packages/vuetify/src/components/VImg/VImg.sass
@@ -20,7 +20,7 @@
     filter: $img-preload-filter
 
   &--contain
-    background-size: contain
+    object-fit: contain
 
   &--cover
-    background-size: cover
+    object-fit: cover
