--- a/packages/vuetify/src/components/VIcon/VIcon.sass
+++ b/packages/vuetify/src/components/VIcon/VIcon.sass
@@ -38,7 +38,7 @@
 
 .v-icon
   &--size-default
-    .v-btn:not(.v-btn--icon) &
+    .v-btn:not(.v-btn--icon):not(.v-btn--stacked) &
       font-size: $icon-btn-font-size
       height: $icon-btn-height
       width: $icon-btn-width
