--- a/packages/vuetify/src/components/VBtn/_mixins.scss
+++ b/packages/vuetify/src/components/VBtn/_mixins.scss
@@ -1,14 +1,18 @@
-@mixin button-sizes {
-  @each $sizeName, $multiplier in $size-scales {
-    $size: map-get($button-sizes, 'font-size') + (2 * $multiplier) / 16;
-    $height: map-get($button-sizes, 'height') + (8 * $multiplier);
+@function roundEven ($val) {
+  @return 2 * round($val / 2)
+}
 
-    .v-btn--size-#{$sizeName} {
+@mixin button-sizes ($map: $button-sizes, $immediate: false) {
+  @each $sizeName, $multiplier in $size-scales {
+    $size: map-get($map, 'font-size') + (2 * $multiplier) / 16;
+    $height: map-get($map, 'height') + (8 * $multiplier);
+
+    #{if($immediate, &, '')}.v-btn--size-#{$sizeName} {
       --v-btn-size: #{$size};
       --v-btn-height: #{$height};
       font-size: $size;
-      min-width: round($height * $button-width-ratio);
-      padding: 0 ($height / $button-padding-ratio);
+      min-width: roundEven($height * map-get($map, 'width-ratio'));
+      padding: 0 roundEven($height / map-get($map, 'padding-ratio'));
     }
   }
 }
