--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -104,3 +104,51 @@
 .v-btn
   .v-app-bar &
     @include elevation($button-app-bar-elevation)
+
+.v-btn
+  .v-bottom-navigation &
+    filter: $button-bottom-navigation-filter
+    flex-direction: column
+    font-size: $button-bottom-navigation-font-size
+    height: auto
+    max-width: $button-bottom-navigation-max-width
+    min-width: $button-bottom-navigation-min-width
+    opacity: $button-bottom-navigation-opacity
+    text-transform: $button-bottom-navigation-text-transform
+    transition-duration: $button-bottom-navigation-transition-duration
+    transition-property: transform, opacity, filter
+    width: auto
+
+    @include elevation($button-bottom-navigation-elevation)
+    @include rounded($button-bottom-navigation-border-radius)
+
+  .v-bottom-navigation--grow &
+    width: 100%
+
+  .v-bottom-navigation--horizontal &
+    flex-direction: row
+
+  .v-bottom-navigation--shift &
+    > .v-icon
+      transform: $button-bottom-navigation-shift-icon-transform
+      transition: inherit
+
+    > *:not([class*='v-'])
+      opacity: $button-bottom-navigation-shift-opacity
+      position: absolute
+      top: $button-bottom-navigation-shift-top
+      transform: $button-bottom-navigation-shift-transform
+      transition: inherit
+
+  &--is-active
+    .v-bottom-navigation &
+      filter: $button-bottom-navigation-active-filter
+      opacity: $button-bottom-navigation-active-opacity
+
+    .v-bottom-navigation--shift &
+      > .v-icon
+        transform: $button-bottom-navigation-shift-active-icon-transform
+
+      > *:not([class*='v-'])
+        opacity: $button-bottom-navigation-active-opacity
+        transform: $button-bottom-navigation-shift-active-transform
