--- a/packages/vuetify/src/components/VIcon/_variables.scss
+++ b/packages/vuetify/src/components/VIcon/_variables.scss
@@ -1,4 +1,5 @@
 // Defaults
+$icon-btn-bottom-navigation-font-size: 24px !default;
 $icon-btn-size: 1em !default;
 $icon-btn-font-size: (18 / 14) * $icon-btn-size !default;
 $icon-btn-height: $icon-btn-size !default;
