--- a/packages/vuetify/src/components/VDialog/_variables.scss
+++ b/packages/vuetify/src/components/VDialog/_variables.scss
@@ -1,8 +1,7 @@
-@import '../../styles/styles.sass';
-
+// Defaults
 $dialog-border-radius: $border-radius-root !default;
-$dialog-card-subtitle-padding: 0 24px 20px !default;
 $dialog-card-actions-padding: 8px 16px !default;
+$dialog-card-subtitle-padding: 0 24px 20px !default;
 $dialog-card-text-padding: 0 24px 20px !default;
 $dialog-card-title-font-size: map-deep-get($typography, 'h6', 'size') !default;
 $dialog-card-title-font-weight: map-deep-get($typography, 'h6', 'weight') !default;
@@ -11,3 +10,4 @@ $dialog-card-title-padding: 16px 24px 10px !default;
 $dialog-elevation: 24 !default;
 $dialog-margin: 24px !default;
 $dialog-max-height: 90% !default;
+$dialog-z-index: 2400 !default;
