fix(VCard): remove block shadow when outlined

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -16,6 +16,8 @@
   &--border
     border-width: $card-border-thin-width
 
+    @include elevation(0)
+
     &::before
       @include elevation($card-border-before-elevation)
 
