fix(rtl): apply rtl mixin styles to component root elements

--- a/packages/vuetify/src/styles/tools/_rtl.sass
+++ b/packages/vuetify/src/styles/tools/_rtl.sass
@@ -1,7 +1,9 @@
 @mixin rtl()
+  &.v-locale--is-rtl,
   .v-locale--is-rtl &
     @content
 
 @mixin ltr()
+  &.v-locale--is-ltr,
   .v-locale--is-ltr &
     @content
