fix: apply offset padding to appbars when an overlay is open (#13723)

--- a/packages/vuetify/src/components/VLayout/VLayout.sass
+++ b/packages/vuetify/src/components/VLayout/VLayout.sass
@@ -1,8 +1,13 @@
 @import './index'
 
 .v-layout
+  --v-scrollbar-offset: 0px
   position: relative
   display: flex
   flex: 1 1 auto
   overflow: auto
   z-index: 0
+
+  &--full-height
+    --v-scrollbar-offset: inherit
+    height: 100%
