--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -9,9 +9,10 @@
   max-width: 100%
   overflow: hidden
   padding-left: $app-bar-padding-start
-  padding-right: $app-bar-padding-end
+  padding-right: calc(#{$app-bar-padding-end} + var(--v-scrollbar-offset))
   position: fixed
   transition: $app-bar-transition
+  transition-property: height, transform
 
   @include border($app-bar-border...)
   @include rounded($app-bar-border-radius)
